[package]
name = "bme280-multibus"
version = "0.3.0"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
repository = "https://github.com/newAM/bme280-multibus"
license = "MIT"
description = "BME280 driver with support for SPI and I2C"
readme = "README.md"
keywords = ["i2c", "driver", "embedded-hal-driver", "bosch", "bme280"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
async = ["dep:eha0a"]

[dependencies]
eh0 = { package = "embedded-hal", version = "0.2.7" }
eh1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
eha0a = { package = "embedded-hal-async", version = "=1.0.0-rc.1", optional = true }
serde = { version = "1", features = ["derive"], default-features = false, optional = true }

[dev-dependencies]
ehm = { package = "embedded-hal-mock", git = "https://github.com/newAM/embedded-hal-mock", branch = "eh1-rc.1", features = ["eh0", "eh1", "embedded-hal-async"] }
ftdi-embedded-hal = { version = "0.18", features = ["libftd2xx"] }
tokio = { version = "1.33.0", features = ["rt", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
